# chimerax-copick

./: CHANGELOG.md  README.md  TOOLSHED.md  TUTORIAL.md  pyproject.toml  release-please.config.json
.github/workflows/: release-please.yml
src/: __init__.py  tool.py
src/cmd/: core.py
src/docs/user/: copick_index.html
src/docs/user/commands/: copick_cks.html  copick_dock.html  copick_new.html  copick_new_picks.html  copick_open.html  copick_open_run.html  copick_reload.html  copick_start.html  copick_view.html
src/docs/user/general/: copick_uris.html
src/docs/user/tools/: copick.html
src/io/: __init__.py  copick_fsspec.py  copick_models.py  thumbnail_cache.py
src/misc/: colorops.py  labelops.py  meshops.py  pickops.py  settings.py  validation.py  volops.py
src/mouse/: mousemodes.py
src/shortcuts/: shortcuts.py
src/toolbar/: toolbar.py
src/ui/: AddObjectDialog.py  BaseEntityDialog.py  DuplicateDialog.py  DuplicateSettingsOverlay.py  EditObjectTypesDialog.py  EntityTable.py  NewPickDialog.py  QCoPickModel.py  QCoPickTableModel.py  QCoPickTreeModel.py  QDoubleTable.py  QUnifiedTable.py  QUnifiedTableModel.py  SettingsOverlay.py  async_workers.py  copick_gallery_widget.py  copick_html_widget.py  copick_info_widget.py  emoji_font.py  main_widget.py  ortho_view.py  step_widget.py  table.py  theme_utils.py  tree.py  validation.py
tools/: regenerate_font_subset.py
